# xiaoyu

./: AGENTS.md  GEMINI.md
.kilo/plans/: 1775286651455-mighty-pixel.md  1775971003160-playful-tiger.md  1775983730136-stellar-island.md  1777892323810-jolly-pixel.md  1777894069046-stellar-otter.md
IMU_CTRL/: .gitignore  .mxproject  AGENTS.md  CMakeLists.txt  STM32G431XX_FLASH.ld  flash.sh  imu_ctrl.ioc  readme.md
IMU_CTRL/MDK-ARM/: imu_ctrl.uvguix.fubingyan  imu_ctrl.uvoptx  imu_ctrl.uvprojx  keil-build-viewer-record.txt
IMU_CTRL/applications/: CAN_Server.c  CAN_Server.h  PS4_Controller.c  PS4_Controller.h  WS2812_SPI.h  app.c  app.h  bsp_delay.c  bsp_delay.h  bsp_imu_pwm.h  gimbal_task.c  gimbal_task.h  ins_task.c  ins_task.h  key_function.c  key_function.h  perf_counter.c  usart_receive.c  usart_receive.h  warning_task.c  ws2812_tim.c  ws2812_tim.h
IMU_CTRL/document/: FreeRTOS_系统分析.md  FreeRTOS_系统分析_全模块调用关系.md  event_groups.c_深度分析.md  list.c_深度分析.md  port.c_分析文档.md  stream_buffer.c_深度分析.md  tasks.c_深度分析.md
IMU_CTRL/hal_drivers/: hal_fdcan.c  hal_fdcan.h  hal_gpio.c  hal_gpio.h  hal_uart.h  stm32_hal_fdcan.c
IMU_CTRL/port/: ef_port.c
IMU_CTRL/tests/: CMakeLists.txt  pid_test.cpp
Q16_Drive_Opam_clion/: .clang-format  .gitignore  .mxproject  AGENTS.md  CLAUDE.md  CMakeLists.txt  GEMINI.md  Ozone.jdebug  README.md  STM32G431XX_FLASH.ld  build.sh  cog_compensate.py  flash.sh  flash_jlink.sh  flash_stlink.sh  odrive-G431.ioc  registers.xml  stlink.cfg  指纹模组测试上位机_v2.py  指纹模组通信协议.md
Q16_Drive_Opam_clion/Core/: AGENTS.md
Q16_Drive_Opam_clion/MDK-ARM/: JLinkLog.txt  keil-build-viewer-record.txt  odrive-G431.uvguix.fubingyan  odrive-G431.uvoptx  odrive-G431.uvprojx
Q16_Drive_Opam_clion/Middlewares/: public.h
Q16_Drive_Opam_clion/Q16_FOC/: AGENTS.md  foc_config_q16.h  foc_ctrl_q16.c  foc_ctrl_q16.h  foc_port.c  foc_port.h  foc_sensor.c  foc_sensor.h  foc_sm.c  foc_sm.h  foc_svpwm_q16.c  foc_svpwm_q16.h  q16_16_math.c  q16_16_math.h
Q16_Drive_Opam_clion/applications/: AGENTS.md  CAN_Server.c  CAN_Server.h  MT6816.c  MT6816.h  WS2812_SPI.c  WS2812_SPI.h  app.c  app.h  bsp_delay.c  bsp_delay.h  crc16.c  crc16.h  encoder_alignment.c  encoder_alignment.h  flash_config.h  flash_task.c  flash_task.h  hall_adjustment.c  hall_adjustment.h  key_function.c  key_function.h  key_menu.c  key_menu.h  perf_counter.c  perf_counter.h  usart_protocol.c  usart_protocol.h  usart_receive.c  usart_receive.h  warning_task.c  warning_task.h
Q16_Drive_Opam_clion/auto_code_rules/: embedded_cpp_standards_prompt.md  embedded_design_patterns_prompt.md
Q16_Drive_Opam_clion/auto_doc_rules/: AUTOSAR嵌入式文档生成提示词.md  AUTOSAR嵌入式软件架构设计原理.md
Q16_Drive_Opam_clion/can_comm/: can_comm.c  can_comm.h  can_comm_port.c  can_nm.c  can_nm.h
common/: AGENTS.md
common/crc/: crc.c  (+1 more)
common/fsm/: CMakeLists.txt  fsm.c  fsm_example.c  readme.md
(+211 files in other folders)
